<resources>
    <string name="app_name">Agenda_Android</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="descripcioncontacto">Descripción Contacto</string>
    <string name="botonsiguiente">Siguiente</string>
    <string name="confirmardatos">Confirmar Datos</string>
    <string name="botonatras">Editar Datos</string>


</resources>