<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/etNombre"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textImNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <DatePicker
        android:id="@+id/simpleDatePicker"
        android:layout_width="217dp"
        android:layout_height="168dp"
        android:layout_marginTop="8dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleDatePicker"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textImTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textImEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDescripcionContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textImDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcioncontacto" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="41dp"
        android:text="@string/botonsiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcionContacto" />


</androidx.constraintlayout.widget.ConstraintLayout>